--- a/Exemplo08/app/src/main/res/layout/activity_main.xml
+++ b/Exemplo08/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -7,12 +7,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="br.edu.ifsp.hto.exemplo08.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Teste"
-        android:id="@+id/btTeste"
-        android:onClick="onClickBtTeste" />
-</FrameLayout>
+        android:text="ScrollView"
+        android:id="@+id/btScrollView"
+        android:onClick="onClickBtScrollView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ScrollView com Inflate"
+        android:id="@+id/btScrollViewInflate"
+        android:onClick="onClickBtScrollViewInflate" />
+</LinearLayout>
